--- a/linux04/实验四.md
+++ b/linux04/实验四.md
@@ -104,6 +104,7 @@ bash task2.sh -n
 # 年龄最大的球员是谁？年龄最小的球员是谁？
 # -m：调用脚本内置函数showAges
 # 注意：年龄为最值的球员可能有多个
+bash task2.sh -m
 ```
 
 ![image](showAge.jpg)
